# server_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.txt  main.cxx
cmake/: Sanitizers.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  database.cxx  database.hxx
src/database/: CMakeLists.txt  constant.hxx  database.cxx  database.hxx
src/logic/: CMakeLists.txt  logic.cxx  logic.hxx
src/server/: CMakeLists.txt  server.cxx  server.hxx  user.cxx  user.hxx
template_database/: empty_test_db
test/: CMakeLists.txt  constant.hxx  test.cxx
